[gd_scene load_steps=7 format=2]

[ext_resource path="res://player/PlayerGun.gd" type="Script" id=1]
[ext_resource path="res://player/BasicGun.gd" type="Script" id=2]
[ext_resource path="res://player/BurstGun.gd" type="Script" id=3]
[ext_resource path="res://player/LaserGun.gd" type="Script" id=4]
[ext_resource path="res://world/light.png" type="Texture" id=5]
[ext_resource path="res://player/BombGun.gd" type="Script" id=6]

[node name="PlayerGun" type="Node2D"]
script = ExtResource( 1 )

[node name="ScrollWheelDebouncer" type="Timer" parent="."]
wait_time = 0.08
one_shot = true

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( 0, -8.74228e-08 )

[node name="Pixel" type="ColorRect" parent="."]
margin_left = 7.0
margin_top = -8.74228e-08
margin_right = 8.0
margin_bottom = 1.0
rect_pivot_offset = Vector2( 0.5, 0.5 )
color = Color( 0.717647, 0.101961, 0.101961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BasicGun" type="Node" parent="."]
script = ExtResource( 2 )

[node name="BurstGun" type="Node" parent="."]
script = ExtResource( 3 )

[node name="AutofireTimer" type="Timer" parent="BurstGun"]
wait_time = 0.06
one_shot = true

[node name="ShotTimer" type="Timer" parent="BurstGun"]
wait_time = 0.2
one_shot = true

[node name="ZapRay" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="RayCast2D" type="RayCast2D" parent="ZapRay"]
enabled = true
cast_to = Vector2( 24, 0 )
collision_mask = 328
collide_with_areas = true

[node name="Line2D" type="Line2D" parent="ZapRay"]
points = PoolVector2Array( 0, 0, 8, 0, 16, 0, 24, 0 )
width = 1.0
default_color = Color( 0.996078, 0.25098, 0.25098, 1 )

[node name="Timer" type="Timer" parent="ZapRay"]
wait_time = 0.05
autostart = true

[node name="Light2D" type="Light2D" parent="ZapRay"]
position = Vector2( 21.6985, -0.139443 )
scale = Vector2( 0.0377973, 0.0268377 )
texture = ExtResource( 5 )
color = Color( 0.94902, 0.34902, 0.188235, 1 )
energy = 1.47
range_layer_min = -512
range_layer_max = 512

[node name="BombGun" type="Node" parent="."]
script = ExtResource( 6 )
[connection signal="timeout" from="ZapRay/Timer" to="ZapRay" method="_on_Timer_timeout"]
